fix: remove horizontal scrolling of menu

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -962,6 +962,15 @@ body .banner-label {
 
 #search_form {
   padding: 0 10px;
+  .form-group {
+    margin: {
+      left: 0;
+      right: 0;
+    }
+    .col-xs-12 {
+      padding: 0;
+    }
+  }
 }
 
 .crowdfounding-info {
